<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExemploBanco</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cliente_form">Cadastro de Cliente</string>
    <string name="nome">Nome:</string>
    <string name="documento">Documento:</string>
    <string name="telefone">Telefone:</string>
    <string name="email">Email:</string>
    <string name="btn_cadastro_cliente">Cadastrar</string>
    <string name="novo_cliente">Novo Cliente</string>
    <string name="dialog_editar">Editar</string>
    <string name="dialog_excluir">Excluir</string>
    <string name="dialog_titulo">Selecione</string>
    <string name="dialog_yes">Sim</string>
    <string name="dialog_no">Não</string>
    <string name="dialog_confirm_title">Você tem certeza?</string>

</resources>
